Fixed the notification popup in Hotmail (z-index issue)

--- a/media/sticky.css
+++ b/media/sticky.css
@@ -7,7 +7,7 @@ div.sticky-queue
 	-moz-box-shadow:0px 0px 5px #bbb;
 	-webkit-box-shadow:0px 0px 5px #bbb;
 	width:70%;
-    z-index: 1000;
+    z-index: 3000000;
 	}
 div.sticky-note
 	{ padding-right:20px; }
